--- a/TID/react/03_jsx.html
+++ b/TID/react/03_jsx.html
@@ -15,15 +15,23 @@
             );
         }
         const root = document.getElementById("root");
-        const Button = () => (<button style={{
-                    backgroundColor: "tomato",
-                }} onClick={() => console.log('Im clicked')}>
-            Click Me
-        </button>);
-        const brtag = React.createElement("br", null)
-        const Container = () => <div>
-            <Title /> <Button />
+        let counter = 0
+
+        function countUp() {
+            counter += 1
+            render()
+        }
+
+        function render(){
+            ReactDOM.render(<Container />, root);
+        }
+
+        const Container = () => (
+            <div>
+                <h3> Total clicks: {counter}</h3>
+                <button onClick={countUp}>Click Me</button>
             </div>
-        ReactDOM.render(<Container />, root);
+        )
+        render()
     </script>
 </html>
