2021년 마지막 커밋

--- a/TID/react/03_jsx.html
+++ b/TID/react/03_jsx.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html
     <body>
         <div id="root"></div>
     </body>
@@ -13,7 +13,7 @@
                 Hello I'm a titile
             </h3>
             );
-        }
+        } //2021년 고생했다..!!
         const root = document.getElementById("root");
         let counter = 0
 
